--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = utile
+NAME = Now
 
 SRCS = main.cpp \
 	Fixed.cpp
